<resources>
    <string name="app_name">QUIZ</string>
    <string name="checkbox1_Smell">Smell</string>
    <string name="checkbox2_Eyesight">Eyesight</string>
    <string name="checkbox3_Smile">Smile</string>
    <string name="checkbox4_Hearing">Hearing</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_reset">RESET</string>
    <string name="Question1">1. How many triangles are in a given picture?</string>
    <string name="Question1_radio_btn_1">9</string>
    <string name="Question1_radio_btn_2">10</string>
    <string name="Question1_radio_btn_3">11</string>
    <string name="Question1_radio_btn_4">12</string>
    <string name="Question1_radio_btn_5">13</string>
    <string name="Question2">2. Please provide the last number:</string>
    <string name="Question2_line_1">1&#8211;2&#8211;4&#8211;7&#8211;11&#8211;16&#8211;22&#8211;?</string>
    <string name="Question3">3. Which 3 words are related to each other?</string>
    <string name="Question4">4. Which shape will complement the pattern?</string>
    <string name="Question4_radio_btn_1">A</string>
    <string name="Question4_radio_btn_2">B</string>
    <string name="Question5">5. Enter the result of the action:</string>
    <string name="Question5_line_1">(2 * 3 + 5) + 2 * (3 + 5) =?</string>
    <string name="Question6">6. What number will be the result of the last action?</string>
    <string name="Question6_line_1">2 + 3 = 10"</string>
    <string name="Question6_line_2">7 + 2 = 63</string>
    <string name="Question6_line_3">6 + 5 = 66</string>
    <string name="Question6_line_4">8 + 4 = ??</string>
    <string name="Question7">7. Please provide the result of the action.</string>
    <string name="Question7_line_1">1 + 1 + 1 + 1 + 1</string>
    <string name="Question7_line_2">1 + 1 + 1 + 1 + 1</string>
    <string name="Question7_line_3">1 + 1 * 0 + 1 = ?</string>
</resources>
