<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dummy_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:imeOptions="actionDone"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="3dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/CustomTextStyle"
                android:text="@string/Question1" />

            <ImageView
                android:id="@+id/img_triangles"
                android:layout_width="320dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/image_triangles"
                tools:ignore="ContentDescription" />

            <RadioGroup
                android:id="@+id/radio_group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/AnswerOneOne_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:onClick="changeProgress1"
                    android:text="@string/Question1_radio_btn_1" />

                <RadioButton
                    android:id="@+id/AnswerOneOTwo_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="changeProgress1"
                    android:text="@string/Question1_radio_btn_2" />

                <RadioButton
                    android:id="@+id/AnswerOneThree_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="changeProgress1"
                    android:text="@string/Question1_radio_btn_3" />

                <RadioButton
                    android:id="@+id/AnswerOneFour_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="changeProgress1"
                    android:text="@string/Question1_radio_btn_4" />

                <RadioButton
                    android:id="@+id/AnswerOneFive_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="changeProgress1"
                    android:text="@string/Question1_radio_btn_5" />
            </RadioGroup>

            <TextView
                style="@style/CustomTextStyle"
                android:text="@string/Question2" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question2_line_1" />

            <EditText
                android:id="@+id/AnswerTwoOne"
                style="@style/CustomEditTextStyle" />

            <TextView
                style="@style/CustomTextStyle"
                android:text="@string/Question3" />

            <CheckBox
                android:id="@+id/t1"
                style="@style/CustomCheckBoxTextStyle"
                android:onClick="changeProgress3"
                android:text="@string/checkbox1_Smell" />

            <CheckBox
                android:id="@+id/t2"
                style="@style/CustomCheckBoxTextStyle"
                android:onClick="changeProgress3"
                android:text="@string/checkbox2_Eyesight" />

            <CheckBox
                android:id="@+id/t3"
                style="@style/CustomCheckBoxTextStyle"
                android:onClick="changeProgress3"
                android:text="@string/checkbox3_Smile" />

            <CheckBox
                android:id="@+id/t4"
                style="@style/CustomCheckBoxTextStyle"
                android:onClick="changeProgress3"
                android:text="@string/checkbox4_Hearing" />

            <TextView
                style="@style/CustomTextStyle"
                android:text="@string/Question4" />

            <ImageView
                android:id="@+id/img_pattern"
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/image_pattern"
                tools:ignore="ContentDescription" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/AnswerFourOne_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="changeProgress4"
                    android:text="@string/Question4_radio_btn_1" />

                <RadioButton
                    android:id="@+id/AnswerFourTwo_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="changeProgress4"
                    android:text="@string/Question4_radio_btn_2" />
            </RadioGroup>

            <TextView
                style="@style/CustomTextStyle"
                android:text="@string/Question5" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question5_line_1" />

            <EditText
                android:id="@+id/AnswerFiveOne"
                style="@style/CustomEditTextStyle" />

            <TextView
                style="@style/CustomTextStyle"
                android:text="@string/Question6" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question6_line_1" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question6_line_2" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question6_line_3" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question6_line_4" />

            <EditText
                android:id="@+id/AnswerSixOne"
                style="@style/CustomEditTextStyle" />

            <TextView
                style="@style/CustomTextStyle"
                android:text="@string/Question7" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question7_line_1" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question7_line_2" />

            <TextView
                style="@style/CustomSubTextStyle"
                android:text="@string/Question7_line_3" />

            <EditText
                android:id="@+id/AnswerSevenOne"
                style="@style/CustomEditTextStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="Submit"
                    android:text="@string/button_submit" />

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="Reset"
                    android:text="@string/button_reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>